# rshs

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: build+test.yaml  build.yaml  release.yaml  test.yaml
benches/: fileserver.rs  micro.rs  middleware.rs  path_resolve.rs  scenarios.rs  webdav.rs
benches/common/: mod.rs
docs/: benchmark-report.md  deploy-docker-compose.md  deploy-k8s.md  deploy-podman-quadlet.md  litmus-test-report.md  tailscale-auth.md  usage.md
src/: auth.rs  cli.rs  html.rs  lib.rs  main.rs  scandir.rs
src/cli/: mod.rs
src/handlers/: dav_fallback.rs  file.rs  http.rs  http_get_head.rs  locks.rs  mod.rs  native_delete.rs  native_http.rs  native_http_delete.rs  native_http_put.rs  native_locks.rs  native_options.rs  native_put.rs  native_webdav.rs  native_webdav_copy_move.rs  native_webdav_mkcol.rs  native_webdav_propfind.rs  native_webdav_proppatch.rs  serve.rs  webdav.rs
src/middleware/: auth.rs  health.rs  health_check.rs  lock.rs  mod.rs  tailscale.rs
src/server/: auth_basic.rs  cleanup.rs  http_server.rs  mod.rs  shadow.rs  shutdown.rs  time_util.rs  tls.rs  webdav.rs
src/utils/: error.rs  fs_batch.rs  mod.rs  path.rs  time.rs
src/webdav/: fs.rs  ls.rs  method.rs  mod.rs  xml.rs
tests/: auth_tests.rs  cli_tests.rs  handler_tests.rs  health_tests.rs  http_server_tests.rs  http_tests.rs  lock_tests.rs  parse_tests.rs  shutdown_tests.rs  tls_tests.rs  types_tests.rs  webdav_tests.rs
tests/common/: mod.rs
