[package]
name = "rshs"
version = "0.8.4"
description = "A lightweight HTTP + WebDAV file server"
edition = "2024"
rust-version = "1.87"
authors = ["Zheng Junyi <zhengjunyi@live.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/mogeko/rshs"
keywords = ["http", "webdav", "file-server", "axum"]
categories = ["web-programming::http-server"]

[features]
default = []

[dependencies]
axum = { version = "0.8", features = ["http2"] }
base64 = "0.22"
clap = { version = "4.6", features = ["derive", "env"] }
derive-new = "0.7"
futures-util = "0.3"
mime_guess = "2.0"
percent-encoding = "2.3"
quick-xml = "0.40"
rustls = "0.23"
rustls-pemfile = "2.2"
sha-crypt = { version = "0.6", features = ["getrandom"] }
sha2 = "0.11"
tokio = { version = "1.52", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "fs",
] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tempfile = "3.27"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

[[bench]]
name = "micro"
harness = false

[[bench]]
name = "fileserver"
harness = false

[[bench]]
name = "webdav"
harness = false

[[bench]]
name = "middleware"
harness = false

[[bench]]
name = "path_resolve"
harness = false

[[bench]]
name = "scenarios"
harness = false
